welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:26: warning: enclosing method lireColonne has result type Unit: return value discarded
  return T
  ^Array1:45: error: not found: value T
    setCouleurBrosse(T[j])
                     ^Array1:45: error: not found: type j
    setCouleurBrosse(T[j])
                       ^